feat: optimized cron module
