# backend/dao/model/cron_job.go
@@ -45,24 +45,40 @@ func GetAllCronJobTypes() []CronJobType {
 	}
 }
 
+type CronJobConfigStatus string
+
+const (
+	CronJobConfigStatusUnknown   CronJobConfigStatus = "unknown"
+	CronJobConfigStatusSuspended CronJobConfigStatus = "suspended"
+	CronJobConfigStatusIdle      CronJobConfigStatus = "idle"
+	CronJobConfigStatusRunning   CronJobConfigStatus = "running"
+)
+
 type CronJobConfig struct {
 	gorm.Model
-	Name    string         `gorm:"type:varchar(128);not null;index;unique;comment:Cronjob配置名称" json:"name"`
-	Type    CronJobType    `gorm:"type:varchar(128);not null;index;comment:Cronjob类型" json:"type"`
-	Spec    string         `gorm:"type:varchar(128);not null;index;comment:Cron调度规范" json:"spec"`
-	Suspend *bool          `gorm:"not null;default:false;comment:是否暂停执行" json:"suspend"`
-	Config  datatypes.JSON `gorm:"type:jsonb;comment:Cronjob配置数据" json:"config"`
-	EntryID int            `gorm:"type:int;comment:Cronjob标识ID" json:"entry_id"`
-}
-
-func (c *CronJobConfig) GetSuspend() bool {
-	var v bool
-	if c.Suspend != nil {
-		v = *c.Suspend
-	}
-	return v
+	Name    string              `gorm:"type:varchar(128);not null;index;unique;comment:Cronjob配置名称" json:"name"`
+	Type    CronJobType         `gorm:"type:varchar(128);not null;index;comment:Cronjob类型" json:"type"`
+	Spec    string              `gorm:"type:varchar(128);not null;index;comment:Cron调度规范" json:"spec"`
+	Config  datatypes.JSON      `gorm:"type:jsonb;comment:Cronjob配置数据" json:"config"`
+	Status  CronJobConfigStatus `gorm:"type:varchar(128);not null;index;default:unknown;comment:执行状态" json:"status"`
+	EntryID int                 `gorm:"type:int;comment:Cronjob标识ID" json:"entry_id"`
 }
 
 func (CronJobConfig) TableName() string {
 	return "cron_job_configs"
+}
+
+// IsSuspended 判断任务是否被暂停
+func (c *CronJobConfig) IsSuspended() bool {
+	return c.Status == CronJobConfigStatusSuspended
+}
+
+// IsRunning 判断任务是否正在运行
+func (c *CronJobConfig) IsRunning() bool {
+	return c.Status == CronJobConfigStatusRunning
+}
+
+// IsIdle 判断任务是否空闲
+func (c *CronJobConfig) IsIdle() bool {
+	return c.Status == CronJobConfigStatusIdle
 }
